--- a/about.html
+++ b/about.html
@@ -12,9 +12,9 @@
       </header>
       <div class="container">
           <h2>Um pouco sobre mim</h2>
-          <p>Meu nome é [Seu Nome]. Eu sou um [sua ocupação] interessado em [seus interesses].</p>
-          <p>Eu gosto de [suas atividades favoritas] e estou interessado em aprender mais sobre [áreas de interesse].</p>
-          <p>Sinta-se à vontade para entrar em contato comigo através do meu e-mail: [seu e-mail].</p>
+          <p>Meu nome é Hendrick Diego. Eu sou um estudante interessado em cursar ADS.</p>
+          <p>Eu gosto de pedalar e frequentar academia e estou interessado em aprender mais sobre progr.</p>
+          <p>Sinta-se à vontade para entrar em contato comigo através do meu e-mail: hendrick.diego@academico.ifpb.edu.br.</p>
       </div>
   </body>
 </html>
